--- a/first-project/src/app/employee/create-employee/create-employee.component.html
+++ b/first-project/src/app/employee/create-employee/create-employee.component.html
@@ -40,16 +40,25 @@
 
             </div>
 
-            <div class=" form-group row">
-                <label for="email" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                    <input formControlName="email" (blur)="logValidationErrors()" [ngClass]="{'is-invalid' : formError.email }" type="email" class="form-control" id="email" placeholder="Email" required>
-                    <!--[ngClass]="{'is-invalid' : employeeForm.get('email').invalid && employeeForm.get('email').touched}"<= bind it with inputi field
-                         <span class="invalid-feedback">
-            <div>Email is required.</div>
-            <div>Email pattren is not vaild!</div>
-          </span> -->
-                    <span class="invalid-feedback">{{formError.email}}</span>
+            <div formGroupName="emailGroup">
+                <div class=" form-group row">
+                    <label for="email" class="col-sm-2 col-form-label">Email</label>
+                    <div class="col-sm-10">
+                        <input formControlName="email" (blur)="logValidationErrors()" [ngClass]="{'is-invalid' : formError.email}" type="email" class="form-control" id="email" placeholder="Email">
+                        <!--[ngClass]="{'is-invalid' : employeeForm.get('email').invalid && employeeForm.get('email').touched}"<= bind it with inputi field
+                                     <span class="invalid-feedback">
+                        <div>Email is required.</div>
+                        <div>Email pattren is not vaild!</div>
+                      </span> -->
+                        <span class="invalid-feedback">{{formError.email}}</span>
+                    </div>
+                </div>
+                <div class=" form-group row">
+                    <label for="confirmEmail" class="col-sm-2 col-form-label">Confirm Email</label>
+                    <div class="col-sm-10">
+                        <input formControlName="confirmEmail" (blur)="logValidationErrors()" [ngClass]="{'is-invalid' : formError.confirmEmail || formError.emailGroup}" type="email" class="form-control" id="confirmEmail" placeholder="Confirm Email" required>
+                        <span class="invalid-feedback" *ngIf='formError.confirmEmail||formError.emailGroup'>{{formError.confirmEmail ? formError.confirmEmail : formError.emailGroup}}</span>
+                    </div>
                 </div>
             </div>
 
@@ -66,39 +75,50 @@
                 </div>
             </div>
 
-            <div formGroupName="skills">
-                <div class="form-group row">
-                    <label for="skillName" class="col-sm-2 col-form-label">Skill Name</label>
-                    <div class="col-sm-10  form-inline">
-                        <div class="mr-2 ">
-                            <input formControlName="skillName" (blur)="logValidationErrors()" [ngClass]="{'is-invalid' : formError.skillName }" type="text" class="form-control" id="skillName" placeholder="skillName" required>
-                            <span class="invalid-feedback">{{formError.skillName}}</span>
-                        </div>
-                        <div class="mr-2 ">
-                            <input formControlName="exprienceInYears" (blur)="logValidationErrors()" [ngClass]="{'is-invalid' : formError.exprienceInYears }" type="text" class="form-control" id="proficiencyInYears" placeholder="Exprience In Years" required>
-                            <span class="invalid-feedback">{{formError.exprienceInYears}}</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group row ">
-                    <label for="proficiency" class="col-sm-2 col-form-label">Proficiency</label>
-                    <div class="col-sm-10  form-inline " (blur)="logValidationErrors()" [ngClass]="{'is-invalid' : formError.proficiency }">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input " formControlName="proficiency" type="radio" name="proficiency" id="biginer" value="biginer">
-                            <label class="form-check-label" for="biginer">Biginer</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" formControlName="proficiency" type="radio" name="proficiency" id="intermidiate" value="intermidiate">
-                            <label class="form-check-label" for="intermidiate">Intermidiate</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" formControlName="proficiency" type="radio" name="proficiency" id="advance" value="advance">
-                            <label class="form-check-label" for="advance">Advance </label>
-                        </div>
-                    </div>
-                    <span class="invalid-feedback offset-sm-2 pl-3">{{formError.proficiency}}</span>
+            <div class="form-group row">
+                <div class="col-sm-10 offset-sm-2">
+                    <button type="button" (click)='addskillButtonClick()' class="btn btn-primary ">Add Skill</button>
                 </div>
             </div>
+
+            <div formArrayName="skills" *ngFor="let skill of skillArray; let i = index">
+                <div [formGroupName]="i" class="col-sm-10 offset-sm-2">
+                    <div class="form-group row">
+                        <label [attr.for]="'skillName'+i" class="col-sm-2 col-form-label">Skill</label>
+
+                        <div class=" col-sm-3 mr-2 ">
+                            <input formControlName="skillName" [ngClass]="{'is-invalid' : skill.get('skillName').invalid && skill.get('skillName').touched }" type="text" class="form-control" [id]="'skillName'+i" placeholder="skillName" required>
+                            <span class="invalid-feedback" *ngIf="skill.get('skillName').errors?.required && skill.get('skillName').touched"> Required skill name.</span>
+                        </div>
+                        <label [attr.for]="'exprienceInYears'+i" class="col-sm-2 col-form-label">Experience</label>
+                        <div class=" col-sm-3 mr-2 ">
+                            <input formControlName="exprienceInYears" [ngClass]="{'is-invalid' : skill.get('exprienceInYears').invalid && skill.get('exprienceInYears').touched }" type="text" class="form-control" [id]="'exprienceInYears'+i" placeholder="Exprience In Years" required>
+                            <span class="invalid-feedback " *ngIf="skill.get('exprienceInYears').errors?.required && skill.get('exprienceInYears').touched">Required Exprience.</span>
+                        </div>
+
+                    </div>
+                    <div class="form-group row ">
+                        <label for="proficiencyRadioGruop" class="col-sm-2 col-form-label">Proficiency</label>
+                        <div class="col-sm-10  form-inline " id="proficiencyRadioGruop" [ngClass]="{'is-invalid' : skill.get('proficiency').invalid && skill.get('proficiency').touched  }">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input " formControlName="proficiency" type="radio" [id]="'beginner'+i" value="beginner">
+                                <label class="form-check-label" [attr.for]="'beginner'+i">Beginner</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" formControlName="proficiency" type="radio" [id]="'intermidiate'+i" value="intermidiate">
+                                <label class="form-check-label" [attr.for]="'intermidiate'+i">Intermidiate</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" formControlName="proficiency" type="radio" [id]="'advance'+i" value="advance">
+                                <label class="form-check-label" [attr.for]="'advance'+i">Advance </label>
+                            </div>
+                        </div>
+                        <span class="invalid-feedback offset-sm-2 pl-3" *ngIf="skill.get('proficiency').errors?.required || skill.get('proficiency').dirty">{{formError.proficiency}}</span>
+                    </div>
+                </div>
+            </div>
+
+
 
 
 
@@ -107,7 +127,7 @@
                     <div class="row">
                         <button type="submit" class="btn btn-success m-2 col-sm-4">Save</button>
                         <button type="button" (click)='onLoadDataClick()' class="btn btn-primary m-2 col-sm-3">Load
-              Data</button>
+                            Data</button>
                     </div>
 
 
