--- a/first-project/src/app/employee/list-employees/list-employees.component.html
+++ b/first-project/src/app/employee/list-employees/list-employees.component.html
@@ -1,1 +1,20 @@
-<p>list-employees works!</p>
+<table class="table table-striped table-bordered mt-5 text-center" *ngIf="employees && employees.length">
+    <thead class="bg-secondary">
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Contact Preference</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let employee of employees">
+            <td>{{employee.fullName}}</td>
+            <td>{{employee.email}}</td>
+            <td>{{employee.phone}}</td>
+            <td>{{employee.contact}}</td>
+            <td><button class="btn btn-primary">Edit</button></td>
+        </tr>
+    </tbody>
+</table>
